Updated server to v1.1.2
